# rust-cmd-starter

./: Cargo.toml  README.md
src/: cli.rs  config.rs  logger.rs  main.rs
